--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "main": "server/server.js",
   "scripts": {
-    "pretest": "jshint ."
+    "run": "node server/server.js"
   },
   "dependencies": {
     "async": "^0.9.0",
@@ -15,10 +15,14 @@
     "loopback-connector-mongodb": "^1.5.0",
     "loopback-connector-mysql": "^1.4.7",
     "loopback-datasource-juggler": "^2.7.0",
-    "serve-favicon": "^2.0.1"
+    "serve-favicon": "^2.0.1",
+    "path": "^0.12.7",
+    "run-sequence": "^1.1.5",
+    "gulp-nodemon": "^2.0.6"
   },
   "devDependencies": {
-    "jshint": "^2.5.6"
+    "babel-core": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0"
   },
   "license": "MIT"
 }
