--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "async": "^0.9.0",
     "compression": "^1.0.3",
     "errorhandler": "^1.1.1",
+    "gulp-nodemon": "^2.0.6",
     "loopback": "^2.5.0",
     "loopback-boot": "^2.2.0",
     "loopback-component-explorer": "^2.1.0",
     "loopback-connector-mongodb": "^1.5.0",
     "loopback-connector-mysql": "^1.4.7",
     "loopback-datasource-juggler": "^2.7.0",
-    "serve-favicon": "^2.0.1",
     "path": "^0.12.7",
     "run-sequence": "^1.1.5",
-    "gulp-nodemon": "^2.0.6"
+    "serve-favicon": "^2.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0"
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-2": "^6.5.0"
   },
   "license": "MIT"
 }
