--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "compression": "^1.0.3",
+    "cors": "^2.7.1",
     "errorhandler": "^1.1.1",
     "gulp-nodemon": "^2.0.6",
     "loopback": "^2.5.0",
